--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "1.9.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "dayjs": "1.11.13",
     "lodash": "4.17.21",
     "lucide-react": "0.511.0",
     "next": "15.3.2",
